--- a/src/PBN.APP/View/MainPage.xaml
+++ b/src/PBN.APP/View/MainPage.xaml
@@ -52,6 +52,13 @@
             </CollectionView.ItemTemplate>
         </CollectionView>
 
+        <Button Text="Add Player"
+                Command="{Binding AddPlayerCommand}"
+                Grid.Row="1"
+                Grid.Column="0"
+                Margin="8"/>
+
+       
         <ActivityIndicator IsVisible="{Binding IsLoading}" 
                            IsRunning="{Binding IsLoading}"
                            HorizontalOptions="FillAndExpand" 
