--- a/src/PBN.APP/View/PlayerPage.xaml
+++ b/src/PBN.APP/View/PlayerPage.xaml
@@ -1,11 +1,11 @@
-<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="PBN.APP.View.PlayerPage"
              xmlns:viewmodel="clr-namespace:PBN.APP.ViewModel"
              x:DataType="viewmodel:PlayerViewModel"
              Title="{Binding Player.Name}"
-             xmlns:model="clr-namespace:PBN.Models;assembly=PBN.Models">
+             xmlns:model="clr-namespace:PBN.APP.Models">
 
     <StackLayout>
         <VerticalStackLayout>
