--- a/src/PBN.APP/View/TeamsPage.xaml
+++ b/src/PBN.APP/View/TeamsPage.xaml
@@ -1,11 +1,11 @@
-<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="PBN.APP.View.TeamsPage"
              xmlns:viewmodel="clr-namespace:PBN.APP.ViewModel"
              x:DataType="viewmodel:TeamsViewModel"
              Title="{Binding Title}"
-            xmlns:model="clr-namespace:PBN.Models;assembly=PBN.Models">
+             xmlns:model="clr-namespace:PBN.APP.Models">
 
     <StackLayout>
         <VerticalStackLayout>
@@ -19,7 +19,7 @@
                            HorizontalOptions="FillAndExpand" 
                            VerticalOptions="CenterAndExpand"/>
 
-        <CollectionView BackgroundColor="Transparent"
+        <CollectionView Background="Transparent"
                         VerticalOptions="FillAndExpand"
                         ItemsSource="{Binding Players}"
                         SelectionMode="Multiple"
